package com.happyfire.command;

/**
 * @Author deng shuo
 * @Date 2021/1/17 14:09
 * @Version 1.0
 */
public interface Command {
    public void execute();
}
