package com.happyfire.command;

/**
 * @Author deng shuo
 * @Date 2021/1/17 14:10
 * @Version 1.0
 */
public class Light {
    public void on(){
        System.out.println("The light is open");
    }
    public void off(){
        System.out.println("The light is off");
    }
}
