package com.happyfire.command;

/**
 * @Author deng shuo
 * @Date 2021/1/17 14:51
 * @Version 1.0
 */
public class NoCommand implements Command {
    @Override
    public void execute() {

    }
}
